UCLALIB-157: homepage search box hover highlight fix, spacing

--- a/www/sites/all/themes/uclalib_omega/css/uclalib-omega.styles.css
+++ b/www/sites/all/themes/uclalib_omega/css/uclalib-omega.styles.css
@@ -1979,7 +1979,7 @@ a.more-link,
 }
 
 .pane-ucla-tab-search-ucla-tab-search-tabs {
-  margin-bottom: 1em;
+  margin-bottom: 2em;
 }
 .pane-ucla-tab-search-ucla-tab-search-tabs .vertical-tabs {
   border: none;
@@ -1999,6 +1999,7 @@ a.more-link,
 }
 .pane-ucla-tab-search-ucla-tab-search-tabs .vertical-tabs .vertical-tabs-list li a {
   font-size: 1.143em;
+  outline: 0 !important;
   padding: 0.9em 0.2em 0.9em 0;
 }
 .pane-ucla-tab-search-ucla-tab-search-tabs .vertical-tabs .vertical-tabs-list li strong {
@@ -2010,9 +2011,10 @@ a.more-link,
 }
 .pane-ucla-tab-search-ucla-tab-search-tabs .vertical-tabs .vertical-tabs-list li.selected a strong {
   color: #2d2f35;
+  text-decoration: none;
 }
 .pane-ucla-tab-search-ucla-tab-search-tabs .vertical-tabs .vertical-tabs-panes {
-  padding: 0 1em;
+  padding: 1em 0;
 }
 .pane-ucla-tab-search-ucla-tab-search-tabs .vertical-tabs .vertical-tabs-panes .pane-description {
   background: url(../images/question-icon.png) 100% 0 no-repeat;
